k8s/jellystat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat
  namespace: jellystat
spec:
  selector:
    matchLabels:
      app: jellystat
  template:
    metadata:
      labels:
        app: jellystat
    spec:
      containers:
        - name: jellystat
          image: cyfershepard/jellystat:1.1.3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "700m"
              memory: "300Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/backend/backup-data
              name: jellystat-data
      volumes:
        - name: jellystat-data
          persistentVolumeClaim:
            claimName: jellystat-data-pvc
