k8s/jellystat/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellystat
  name: jellystat
spec:
  ports:
    - port: 3000
  selector:
    app: jellystat
  type: ClusterIP
