k8s/jellystat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat
  namespace: jellystat
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - jellystat.local.koryalbert.net
    secretName: koryalbert-tls
  rules:
    - host: jellystat.local.koryalbert.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellystat
                port:
                  number: 3000
